# opengl-fs

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  fragment_simple.glsl  main.c  vertex_simple.glsl
.cache/clangd/index/: glad.c.B24A08BC8DA9CE61.idx  glad.h.AEC2A36237CC99EE.idx  khrplatform.h.FB526304DBB22B4C.idx  main.c.239A6E7CFDCEF679.idx  objects.h.0845BA1B29774A10.idx  shader_utils.c.5C0FFA4022B2E02E.idx  shader_utils.h.A22F0B084A762214.idx  shader_utils.h.F24CADBB6FA2309C.idx  vertex_triangle_shapes.c.A82AE4EE65AD794F.idx  vertex_triangle_shapes.h.F5E7F753AD3CB54A.idx
.ecode/: project_build.json
glad/include/glad/: glad.h
glad/src/: glad.c
src/: objects.h  shader_utils.c  shader_utils.h  vertex_triangle_shapes.c  vertex_triangle_shapes.h
